objects/DecsOnD__Invocation_Configuration__mdt.object
<CustomObject>
    <description>Stores the configuration for a Decisions on Demand batch or trigger invocation</description>
    <fields>
        <fullName>DecsOnD__Create_Log__c</fullName>
        <description>Represents whether Execution Log (PolicyExecutionRecord__c) will be created.</description>
        <label>Create Log</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>On Failure</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__Event__c</fullName>
        <description>Represents trigger event type</description>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFTER_DELETE</fullName>
                </value>
                <value>
                    <fullName>AFTER_INSERT</fullName>
                </value>
                <value>
                    <fullName>AFTER_UNDELETE</fullName>
                </value>
                <value>
                    <fullName>AFTER_UPDATE</fullName>
                </value>
                <value>
                    <fullName>BEFORE_DELETE</fullName>
                </value>
                <value>
                    <fullName>BEFORE_INSERT</fullName>
                </value>
                <value>
                    <fullName>BEFORE_UPDATE</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                    <label>Any</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record is test only</description>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Params__c</fullName>
        <description>Stores various settings around invocation in a JSON format</description>
        <label>Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Policy_Name__c</fullName>
        <description>Name of the Business Policy (Policy__c). 
Used for traversing the relationship.</description>
        <label>Policy Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Policy_SObject__c</fullName>
        <description>Represents the type from Business Policy</description>
        <label>Policy SObject</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Invocation_Configurations1</relationshipLabel>
        <relationshipName>Invocation_Configurations1</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Policy_UUID__c</fullName>
        <description>Unique ID of policy as generated from remote server</description>
        <label>Policy UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Send_Email__c</fullName>
        <description>Indicates whether and how the email will be sent from invocation.</description>
        <label>Send Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>On Failure</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__Status__c</fullName>
        <description>Status of the configuration setting.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__Trigger_SObject_Name__c</fullName>
        <description>Represents which object the policy can be executed from</description>
        <label>Trigger SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Trigger_SObject__c</fullName>
        <description>Represents which object the policy can be executed from</description>
        <label>Trigger SObject</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Invocation_Configurations</relationshipLabel>
        <relationshipName>Invocation_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trigger</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Periodic</fullName>
                </value>
                <value>
                    <fullName>Queueable</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Interactive</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invocation Configuration</label>
    <listViews>
        <fullName>DecsOnD__Details</fullName>
        <columns>MasterLabel</columns>
        <columns>DecsOnD__Policy_SObject__c</columns>
        <columns>DecsOnD__Policy_Name__c</columns>
        <columns>DecsOnD__Type__c</columns>
        <columns>DecsOnD__Status__c</columns>
        <columns>DecsOnD__Is_Test__c</columns>
        <columns>DecsOnD__Trigger_SObject_Name__c</columns>
        <columns>DecsOnD__Event__c</columns>
        <columns>DecsOnD__Create_Log__c</columns>
        <columns>DecsOnD__Send_Email__c</columns>
        <columns>DecsOnD__Params__c</columns>
        <filterScope>Everything</filterScope>
        <label>Details</label>
    </listViews>
    <pluralLabel>Invocation Configurations</pluralLabel>
</CustomObject>